fixed window elements spacing

--- a/FolioPublish/public/stylesheets/style.css
+++ b/FolioPublish/public/stylesheets/style.css
@@ -45,9 +45,6 @@ html {
   vertical-align:bottom;
   }
 
-  .mainElement {
-    background-color: red;
-  }
 
 p {
   margin-left: 30px;
@@ -192,6 +189,20 @@ color: #72d7da;
 color: #51c2b3;
 }
 
+
+  /*this is the code relevent to keyframes and CSS animations//*/
+  @keyframes mymove {
+    0% {
+      top: 0px;  
+    }
+    50% {
+      top: 100px;
+    }
+    100% {
+      top: 0px;
+    }
+  }
+
  
 .hovered {
   animation: mymove 3s;
@@ -229,11 +240,11 @@ color: #51c2b3;
   }
 }
 
-.bgimg
+.window
  {
     background-color: transparent;
     position: relative;
-    /* opacity: 0.65; */
+    opacity: 0.65;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -268,22 +279,18 @@ h3 {
 /* Turn off parallax scrolling for tablets and phones */
 
 @media only screen and (max-device-width: 1024px) {
-    .bgimg
+  .window 
  {
         background-attachment: scroll;
     }
 }
 
 
-/* 400px */
-
-/* ../images/volcano1.jpg */
-
-/* .bgimg { */
-    /* background-color: transparent; */
-    /* background-image: url("particles-js");   */
-    /* min-height: 100%; */
-/* } */
+.window {
+    background-color: transparent;
+    background-image: url("particles-js");  
+    min-height: 100%;
+}
 
 /* wrapper{
     position:relative;
@@ -297,19 +304,19 @@ h3 {
      right:0;
    }
 
-/* #particles canvas{
+#particles canvas{
     position: absolute;
     width: 100%;
     z-index : 999;
-} */
+}
 
 
-/* #particles canvas{
+#particles canvas{
     position: absolute;
     width: 100%;
     height: 100%;
     z-index: -1;
-} */
+}
 
 
 .myclass{
@@ -324,25 +331,13 @@ h3 {
   /* background-size: cover; */
   background-position: 50% 50%;
   background-repeat: no-repeat;             
-  background: linear-gradient(#3c4b47, #93aaa4, #3c4b47);
-  background-size: 400% 400%;
   }
 
 
 
-  /*this is the code relevent to keyframes and CSS animations//*/
-@keyframes mymove {
-  0% {
-    top: 0px;  
-  }
-  50% {
-    top: 100px;
-  }
-  100% {
-    top: 0px;
-  }
-}
 
+background: linear-gradient(#3c4b47, #93aaa4, #3c4b47);
+background-size: 400% 400%;
 
 -webkit-animation: AnimationName 19s ease infinite;
 -moz-animation: AnimationName 19s ease infinite;
